# ric-plt-libe2ap

./: .gitignore  .gitreview  .readthedocs.yaml  CHANGES.txt  CMakeLists.txt  CONTENTS  INFO.yaml  README  README.md  groups  project.config  rmr-version.yaml  tox.ini
doc/src/: master.mk
doc/src/rtd/: .gitignore  Makefile  gen_rel_notes.sh
docs/: conf.yaml  index.rst  rel-notes.rst
releases/: packagecloud.yaml
src/: README
src/e2ap/: CMakeLists.txt  pdu_collection.c
src/wrapper/: CMakeLists.txt  wrapper.c  wrapper.h
test/: README  unit_test.sh
